// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`within credentialsSelectors the selectors match their snapshots for the credentialsByMappingSelector 1`] = `
Object {
  "source": Object {
    "apiKey": "CLOCKIFYAPI",
    "email": "clockify@test.com",
    "userId": "abc",
  },
  "target": Object {
    "apiKey": "TOGGLAPI",
    "email": "toggl@test.com",
    "userId": "123",
  },
}
`;

exports[`within credentialsSelectors the selectors match their snapshots for the credentialsByToolNameSelector 1`] = `
Object {
  "clockify": Object {
    "apiKey": "TOGGLAPI",
    "email": "toggl@test.com",
    "userId": "123",
  },
  "toggl": Object {
    "apiKey": "CLOCKIFYAPI",
    "email": "clockify@test.com",
    "userId": "abc",
  },
}
`;
